--- a/Lab 2/MDK-ARM/Lab 2/Lab 2.build_log.htm
+++ b/Lab 2/MDK-ARM/Lab 2/Lab 2.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  02/09/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Lab 2'
-compiling stm32f0xx_it.c...
+compiling main.c...
 linking...
-Program Size: Code=3202 RO-data=274 RW-data=12 ZI-data=1644  
+Program Size: Code=3298 RO-data=274 RW-data=12 ZI-data=1644  
 FromELF: creating hex file...
 "Lab 2\Lab 2.axf" - 0 Error(s), 0 Warning(s).
 
