--- a/Lab 2/MDK-ARM/Lab 2/Lab 2.build_log.htm
+++ b/Lab 2/MDK-ARM/Lab 2/Lab 2.build_log.htm
@@ -21,30 +21,31 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.2.0.0
 Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
-C:\Users\Jared\Desktop\embedded-lab1\Lab 2\MDK-ARM\Lab 2.uvprojx
-Project File Date:  02/09/2024
+C:\Users\Jared\Desktop\lab01\Lab 2\MDK-ARM\Lab 2.uvprojx
+Project File Date:  02/22/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Lab 2'
-compiling stm32f0xx_hal_tim.c...
-compiling stm32f0xx_hal_msp.c...
+compiling stm32f0xx_it.c...
 compiling main.c...
 compiling stm32f0xx_hal_tim_ex.c...
-compiling stm32f0xx_hal_rcc_ex.c...
-compiling stm32f0xx_hal_rcc.c...
-compiling stm32f0xx_hal.c...
-compiling stm32f0xx_hal_i2c_ex.c...
-compiling stm32f0xx_hal_gpio.c...
-compiling stm32f0xx_hal_dma.c...
-compiling stm32f0xx_hal_cortex.c...
+compiling stm32f0xx_hal_tim.c...
 compiling stm32f0xx_hal_pwr.c...
+compiling stm32f0xx_hal_msp.c...
+compiling stm32f0xx_hal_rcc.c...
+compiling stm32f0xx_hal_i2c_ex.c...
+compiling stm32f0xx_hal_rcc_ex.c...
+compiling stm32f0xx_hal.c...
+compiling stm32f0xx_hal_gpio.c...
 compiling stm32f0xx_hal_pwr_ex.c...
+compiling stm32f0xx_hal_cortex.c...
+compiling stm32f0xx_hal_dma.c...
 compiling stm32f0xx_hal_flash.c...
 compiling stm32f0xx_hal_flash_ex.c...
-compiling stm32f0xx_hal_i2c.c...
 compiling stm32f0xx_hal_exti.c...
 compiling system_stm32f0xx.c...
+compiling stm32f0xx_hal_i2c.c...
 linking...
 Program Size: Code=3298 RO-data=274 RW-data=12 ZI-data=1644  
 FromELF: creating hex file...
@@ -72,7 +73,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
