--- a/lab6/MDK-ARM/Lab6/Lab6.build_log.htm
+++ b/lab6/MDK-ARM/Lab6/Lab6.build_log.htm
@@ -21,34 +21,15 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.2.0.0
 Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
-C:\Users\Jared\Desktop\embedded-lab1\Lab6\MDK-ARM\Lab6.uvprojx
-Project File Date:  03/22/2024
+C:\Users\Jared\Desktop\lab01\lab6\MDK-ARM\Lab6.uvprojx
+Project File Date:  03/28/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Lab6'
-assembling startup_stm32f072xb.s...
-compiling stm32f0xx_it.c...
-compiling stm32f0xx_hal_msp.c...
 compiling main.c...
-compiling stm32f0xx_hal_tim_ex.c...
-compiling stm32f0xx_hal_tim.c...
-compiling stm32f0xx_hal_rcc.c...
-compiling stm32f0xx_hal.c...
-compiling stm32f0xx_hal_rcc_ex.c...
-compiling stm32f0xx_hal_i2c_ex.c...
-compiling stm32f0xx_hal_gpio.c...
-compiling stm32f0xx_hal_dma.c...
-compiling stm32f0xx_hal_cortex.c...
-compiling stm32f0xx_hal_pwr.c...
-compiling stm32f0xx_hal_pwr_ex.c...
-compiling stm32f0xx_hal_flash.c...
-compiling stm32f0xx_hal_flash_ex.c...
-compiling stm32f0xx_hal_i2c.c...
-compiling stm32f0xx_hal_exti.c...
-compiling system_stm32f0xx.c...
 linking...
-Program Size: Code=2866 RO-data=274 RW-data=12 ZI-data=1644  
+Program Size: Code=3226 RO-data=274 RW-data=12 ZI-data=1644  
 FromELF: creating hex file...
 "Lab6\Lab6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -74,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
